tests/paczka1/small_fuzzy/69699237.err
Error in line 6: 2B5fp A686 10,8
Error in line 9: F6raNsHSJGK A686 69,9
Error in line 14: F6raNsHSJGK S446 46,8
